# openMindVisionCamera20230723

open_MindVisionCamaer/: CMakeLists.txt  CRC_Check.cpp  CRC_Check.h  CameraApi.h  CameraDefine.h  Mindvision.cpp  Mindvision.h  armor_detect.cpp  armor_detect.h  armor_detect_testvideo.cpp  armor_detect_testvideo.h  main.cpp  pnp_detect.cpp  pnp_detect.h  serialport.cpp  serialport.h
